2007-11-03  Benhur Stein <benhur@inf.ufsm.br>
    * Clean some compilation warnings; simplify compilation on MacOSX and
      Linux; change installations instructions in README

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
    * */*.nib: add missing files

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
    * General/GNUmakefile: define installation domain; General framework
      needs to be installed separately, before compiling Paje
    * README: change installation howto

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
    * */GNUmakefile: make General into a framework

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregatingChunk.m: use -latestTime instead of
      [lastEntity time]
	* General/PajeEntityInspector.m: change box size calculations so that it
      looks better on Mac
    * Paje/PajeTraceController.m: change default order of filters
    * SpaceTimeViewer/DrawView+Drawing.m: change way of highlighting entities
    * SpaceTimeViewer/DrawView.h: add aux variables for new highlighting
    * SpaceTimeViewer/DrawView.m: call new highlighting
    * SpaceTimeViewer/HierarchyRuler.m: change drawing of ruler to a way
      that is compatible with MacOSX
    * SpaceTimeViewer/STLayoutEditor.[hm]: add steppers for editing numbers
    * SpaceTimeViewer/Shape.m: correct some shapes

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
	* General/Association.m, General/CStringCallBacks.m,
	  General/NSArray+Additions.m, General/NSDate+Additions.h, 
	  General/PajeFilter.m, General/PajeType.m, General/Protocols.h,
	  General/UniqueString.m, OrderFilter/Order.m, Paje/PajeController.m,
	  SpaceTimeViewer/DrawView+Finding.m: change some small incompatibilities
	  with MacOSX (include files, type declarations)

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
	* ReductionFilter/ReduceEntity.m, SpaceTimeViewer/STEntityTypeLayout.m,
	  SpaceTimeViewer/STLayoutEditor.m, StatViewer/StatArray.m: rename