@@ -1,4 +1,7 @@
 2007-11-03  Benhur Stein <benhur@inf.ufsm.br>
+    * better drawing code for variables
+
+2007-11-03  Benhur Stein <benhur@inf.ufsm.br>
     * Clean some compilation warnings; simplify compilation on MacOSX and
       Linux; change installations instructions in README
 
